    (patch 92_armel_gcc43_valist_compat.diff).

  [ Fathi Boudra ]
  * Add 93_jsvalue64_on_ia64.diff patch to fix ftbfs on IA64 due to lack of
    WTF_USE_JSVALUE64. Thanks to Scott Kitterman.
  * Add 94_fix_crash_in_qdbuspendingreply_qdbusreply.diff patch to fix a crash
    in QDBusPendingReply/QDBusReply in case of unconnected calls.
    (Closes: #560838)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 13 Dec 2009 18:43:29 +0200

qt4-x11 (4:4.6.0-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Fathi Boudra:

  * Add french translations.
  * Merge with Kubuntu: add libqt4-sql-tds plugin.

  +++ Changes by Frederik Schwarzer:

  * Fix typos in package descriptions.
    (Closes: #557397, #557396, #557374, #557375, #557376)

 -- Fathi Boudra <fabo@debian.org>  Tue, 01 Dec 2009 14:07:47 +0100

qt4-x11 (4:4.6.0~rc1-1) experimental; urgency=low

  * New upstream release.
  * Remove kde-qt patches:
    - 0288-more-x-keycodes - merged upstream.
  * Update debian/libqt4-dev.install: update installed files.

 -- Fathi Boudra <fabo@debian.org>  Tue, 17 Nov 2009 12:12:36 +0100

qt4-x11 (4:4.6.0~beta1-1) experimental; urgency=low

  * New upstream release.
  * Refresh qt-copy patches: 0180 and 209.
  * Remove qt-copy patches: 0255, 0274, 0280 and 0287.
  * Refresh Debian patches: 01, 05, 09, 11, 16, 18, 19, 30, 40, 41, 50 and 81.
  * Remove upstream patches:
    - 0078-Fix-regressions-in-qeventloop-qtimer-and-qsocketnoti - stolen
      upstream.
  * Remove Debian patches:
    - 14_add_libraries_to_gui_build_where_actually_needed - fixed upstream.
  * Add Debian patches:
    - 12_add_nostrip_for_debug_packages
      Set nostrip to generate debug packages.
  * Update debian/control:
    - Remove Brian Nelson from uploaders field.
      Thanks for his great work on Qt.
    - Drop cdbs build dependency.
    - Add libasound2-dev build dependency.
    - Add libqt4-multimedia package.