@@ -30,8 +30,14 @@ ifeq ($(DEB_HOST_ARCH),arm)
 	extra_configure_opts += -DQT_QLOCALE_USES_FCVT
 endif
 
+# TODO: add sparc 64
+64bits_architectures := amd64 ia64 kfreebsd-amd64
 ifeq ($(DEB_HOST_ARCH_OS),linux)
+ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), $(64bits_architectures)))
+	platform_arg = linux-g++-64
+else
 	platform_arg = linux-g++
+endif
 else
 	platform_arg = glibc-g++
 endif
